@@ -64,6 +64,20 @@ kotlin {
     explicitApi()
 }
 
+val byteBuddyAgent: Configuration by configurations.creating
+
+dependencies {
+    byteBuddyAgent("net.bytebuddy:byte-buddy-agent:1.18.4")
+}
+
 android {
     namespace = "net.matsudamper.money.frontend.common.ui"
+    testOptions {
+        unitTests.all {
+            it.jvmArgs(
+                "-javaagent:${byteBuddyAgent.asPath}",
+                "-Djdk.attach.allowAttachSelf=true",
+            )
+        }
+    }
 }
